Making Changes to C# Classes

--- a/WorkingWithVisualStudio/Views/Home/Index.cshtml
+++ b/WorkingWithVisualStudio/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 <body>
 <table>
     <h3>Products</h3>
+    <p>Request Time: @DateTime.Now.ToString("HH:mm:ss")</p>
     <thead>
     <tr><td>Name</td><td>Price</td></tr>
     </thead>
